--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -23,7 +23,7 @@
           <h3 class="widget-title">Recent Posts</h3>
           <div class="image-text">
             <div>
-              <img src="assets/image.jpg">
+              <img src="assets/user.jpg">
             </div>
             <div class="text">
               <p>Computer & Table</p>
@@ -32,7 +32,7 @@
           </div>
           <div class="image-text">
               <div>
-                <img src="assets/image.jpg">
+                <img src="assets/user.jpg">
               </div>
               <div class="text">
                 <p>Computer & Table</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="image-text">
                 <div>
-                  <img src="assets/image.jpg">
+                  <img src="assets/user.jpg">
                 </div>
                 <div class="text">
                   <p>Computer & Table</p>
