--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,4 +1,5 @@
 .footer-widget {
+    font-family: lato,Roboto,"Helvetica Neue",sans-serif;
     background-color:#1f2a2c;
     color:#ffffff;
     text-align: justify;
