--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,35 @@
-<p>
-  cart works!
-</p>
+<div class="container">
+  <div class="cart transition is-open">
+    <a href="#" class="btn btn-update">Update cart</a>
+    <div class="table">
+      <div class="layout-inline row th">
+        <div class="col col-pro">Product</div>
+        <div class="col col-price align-center ">Price</div>
+        <div class="col col-qty align-center">QTY</div>
+        <div class="col">VAT</div>
+        <div class="col">Total</div>
+      </div>
+      <div class="layout-inline row">
+        <div class="col col-pro layout-inline">
+          <img src="http://static.ddmcdn.com/gif/10-kitten-cuteness-1.jpg" alt="kitten" />
+          <p>Happy Little Critter</p>
+        </div>
+        <div class="col col-price col-numeric align-center ">
+          <p>£59.99</p>
+        </div>
+        <div class="col col-qty layout-inline">
+          <a href="#" class="qty qty-minus">-</a>
+          <input type="numeric" value="3" />
+          <a href="#" class="qty qty-plus">+</a>
+        </div>
+        <div class="col col-vat col-numeric">
+          <p>£2.95</p>
+        </div>
+        <div class="col col-total col-numeric">
+          <p> £182.95</p>
+        </div>
+      </div>
+      <a href="#" class="btn btn-update">Update cart</a>
+    </div>
+  </div>
+</div>
