--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,27 +1,34 @@
 
 .header-widget {
-  background-color: #2874f0;
+  background-color: blue;
+  font-family: lato,Roboto,"Helvetica Neue",sans-serif;
 }
 
 .logo-text h2{
   color:#ffffff;
 }
 
-// .navbar-toggler-icon {
-//   color:#ffffff;
-// }
-
 .navbar ul li {
   padding: 0 13px;
 }
 
 .navbar ul li a {
-  text-transform: uppercase;
+  // text-transform: uppercase;
   font-weight: bold;
-  font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   color: #ffffff;
 }
+
+.navbar-toggler {
+  border-color:#ffffff;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(242,88,29)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+  // .active {
+//   border-bottom-color:1px solid black;
+// }
 
 .user-image {
   float: left;
