cart Service integrated

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link active" [routerLink]="['home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['cart']">Cart {{ cart }}</a>
+          <a class="nav-link" [routerLink]="['cart']">Cart</a>
           <!-- <button type="button" class="btn btn-default btn-sm">
             <span class="glyphicon glyphicon-shopping-cart"></span> Shopping
             Cart
