--- a/src/app/shared/signup/signup.component.html
+++ b/src/app/shared/signup/signup.component.html
@@ -9,7 +9,7 @@
           <form
             class="form-signUp"
             [formGroup]="signUpForm"
-            (ngSubmit)="onSignUp(signUpForm)"
+            (ngSubmit)="onSignUp()"
           >
             <div class="form-group">
               <input
