--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,35 +1,87 @@
-<div class="container">
-  <div class="cart transition is-open">
-    <a href="#" class="btn btn-update">Update cart</a>
-    <div class="table">
-      <div class="layout-inline row th">
-        <div class="col col-pro">Product</div>
-        <div class="col col-price align-center ">Price</div>
-        <div class="col col-qty align-center">QTY</div>
-        <div class="col">VAT</div>
-        <div class="col">Total</div>
+<section class="cart-section">
+  <div class="container">
+    <div class=" empty-cart">
+      <button type="button" class="btn btn-primary" (click)="deleteAll()">
+        Empty Cart
+      </button>
+    </div>
+    <h1>Cart Items</h1>
+
+    <div class="shopping-cart">
+      <!-- <div class="column-labels">
+        <label>Image</label>
+        <label>Product</label>
+        <label>Price</label>
+        <label>Quantity</label>
+        <label>Remove</label>
+        <label>Total</label>
+      </div> -->
+
+      <div class="product" *ngFor="let cart of cartProducts; let i = index">
+        <div>
+          <div class="product-image">
+            <img src="assets/cement.jpg" />
+          </div>
+          <div class="product-details">
+            <div class="product-title">{{ cart.company_name }}</div>
+
+            <!-- <p class="product-description">
+              It has a lightweight, breathable mesh upper with forefoot cables
+              for a locked-down fit.
+            </p> -->
+          </div>
+          <div class="product-price">{{ cart.price }}</div>
+          <div class="product-quantity">
+            <input
+              type="number"
+              value="{{ cart.quantity }}"
+              (input)="cartValue(cart, $event.target.value, i)"
+            />
+          </div>
+          <div class="product-removal">
+            <!-- <button class="btn btn-info btn-sm">
+              <i class="fa fa-refresh"></i>
+            </button> -->
+            <button class="btn btn-danger btn-xs" (click)="deleteOneItem(i)">
+              <i class="fa fa-trash"></i>
+              <!-- <img src="assets/trash.svg" alt="trash"> -->
+            </button>
+          </div>
+          <div class="product-line-price">{{ cart.totalPrice }}</div>
+        </div>
       </div>
-      <div class="layout-inline row">
-        <div class="col col-pro layout-inline">
-          <img src="http://static.ddmcdn.com/gif/10-kitten-cuteness-1.jpg" alt="kitten" />
-          <p>Happy Little Critter</p>
-        </div>
-        <div class="col col-price col-numeric align-center ">
-          <p>£59.99</p>
-        </div>
-        <div class="col col-qty layout-inline">
-          <a href="#" class="qty qty-minus">-</a>
-          <input type="numeric" value="3" />
-          <a href="#" class="qty qty-plus">+</a>
-        </div>
-        <div class="col col-vat col-numeric">
-          <p>£2.95</p>
-        </div>
-        <div class="col col-total col-numeric">
-          <p> £182.95</p>
+      <!-- <div class="product">
+          <div class="product-image">
+            <img src="assets/user.jpg">
+          </div>
+          <div class="product-details">
+            <div class="product-title">ULTRABOOST UNCAGED SHOES</div>
+            <p class="product-description">Born from running culture, these men's shoes deliver the freedom of a cage-free
+              design</p>
+          </div>
+          <div class="product-price">45.99</div>
+          <div class="product-quantity">
+            <input type="number" value="1" min="1">
+          </div>
+          <div class="product-removal">
+            <button class="btn btn-info btn-sm">
+              <i class="fa fa-refresh"></i>
+            </button>
+            <button class="btn btn-danger btn-sm">
+              <i class="fa fa-trash-o"></i>
+            </button>
+          </div>
+          <div class="product-line-price">45.99</div>
+        </div> -->
+
+      <div class="totals">
+        <div class="totals-item totals-item-total">
+          <label>Grand Total</label>
+          <div class="totals-value" id="cart-total">90.57</div>
         </div>
       </div>
-      <a href="#" class="btn btn-update">Update cart</a>
+
+      <button class="checkout">Checkout</button>
     </div>
   </div>
-</div>
+</section>
