--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,236 +1,284 @@
-html {
-    background: #bbc3c6;
-    font: 62.5%/1.5em "Trebuchet Ms", helvetica;
+.cart-section {
+  padding: 15px;
+  margin-top:30px;
+}
+
+.empty-cart {
+  margin-bottom:10px;
+  text-align: end;
+}
+
+.cart-section h1 {
+  margin-bottom :50px;
+
+}
+
+.product-image {
+  float: left;
+  width: 20%;
+}
+ 
+.product-details {
+  float: left;
+  width: 37%;
+}
+ 
+.product-price {
+  float: left;
+  width: 12%;
+}
+ 
+.product-quantity {
+  float: left;
+  width: 10%;
+}
+ 
+.product-removal {
+  float: left;
+  width: 9%;
+}
+ 
+.product-line-price {
+  float: left;
+  width: 12%;
+  text-align: right;
+}
+ 
+/* This is used as the traditional .clearfix class */
+.group:before, .shopping-cart:before, .column-labels:before, .product:before, .totals-item:before,
+.group:after,
+.shopping-cart:after,
+.column-labels:after,
+.product:after,
+.totals-item:after {
+  content: '';
+  display: table;
+}
+ 
+.group:after, .shopping-cart:after, .column-labels:after, .product:after, .totals-item:after {
+  clear: both;
+}
+ 
+.group, .shopping-cart, .column-labels, .product, .totals-item {
+  zoom: 1;
+}
+ 
+/* Apply clearfix in a few places */
+/* Apply dollar signs */
+.product .product-price:before, .product .product-line-price:before, .totals-value:before {
+  content: '$';
+}
+ 
+/* Body/Header stuff */
+body {
+  padding: 0px 30px 30px 20px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+}
+ 
+h1 {
+  font-weight: 100;
+}
+ 
+label {
+  color: #aaa;
+}
+ 
+.shopping-cart {
+  margin-top: -45px;
+}
+ 
+/* Column headers */
+.column-labels label {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.column-labels .product-image, .column-labels .product-details, .column-labels .product-removal {
+  text-indent: -9999px;
+}
+ 
+/* Product entries */
+.product {
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+.btn-sm {
+  padding: 7px 17px;
+  margin-right: 7px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.btn-sm1 {
+  // background-image:url("./assets/trash.svg");
+  padding: 7px 17px;
+  margin-right: 7px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.fa {
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+
+.fas {
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+//   .product .product-image {
+//     text-align: center;
+//   }
+.product .product-image img {
+  width: 100px;
+}
+.product .product-details .product-title {
+  margin-right: 20px;
+  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
+}
+.product .product-details .product-description {
+  margin: 5px 20px 5px 0;
+  line-height: 1.4em;
+}
+.product .product-quantity input {
+  width: 40px;
+}
+.product .remove-product {
+  border: 0;
+  padding: 4px 8px;
+  background-color: #c66;
+  color: #fff;
+  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
+  font-size: 12px;
+  border-radius: 3px;
+}
+.product .remove-product:hover {
+  background-color: #a44;
+}
+ 
+/* Totals section */
+.totals .totals-item {
+  float: right;
+  clear: both;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.totals .totals-item label {
+  float: left;
+  clear: both;
+  width: 79%;
+  text-align: right;
+}
+.totals .totals-item .totals-value {
+  float: right;
+  width: 21%;
+  text-align: right;
+}
+.totals .totals-item-total {
+  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
+}
+ 
+.checkout {
+  float: right;
+  border: 0;
+  margin-top: 20px;
+  padding: 6px 25px;
+  background-color: #6b6;
+  color: #fff;
+  font-size: 25px;
+  border-radius: 3px;
+}
+ 
+.checkout:hover {
+  background-color: #494;
+}
+ 
+/* Make adjustments for tablet */
+@media screen and (max-width: 650px) {
+  .shopping-cart {
+    margin: 0;
+    padding-top: 20px;
+    border-top: 1px solid #eee;
   }
-  
-  * {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
+ 
+  .column-labels {
+    display: none;
   }
-  
-  
-  .shopper {
-    text-transform: lowercase;
-    font: 2em 'Shopper', sans-serif;
-    line-height: 0.5em;
-    display: inline-block;
-  }
-  
-  
-  
-  h1 {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 2.5em;
-  }
-  
-  p {
-    font-size: 1.5em;
-    color: #8a8a8a;
-  }
-  
-  input {
-    border: 0.3em solid #bbc3c6;
-    padding: 0.5em 0.3em; 
-    font-size: 1.4em;
-    color: #8a8a8a;
-    text-align: center;
-  }
-  
-  img {
-    max-width: 9em;
-    width: 100%;
-    overflow: hidden; 
-    margin-right: 1em;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .container {
-    max-width: 75em;
-    width: 95%;
-    margin: 40px auto;  
-    overflow: hidden;
-    position: relative;
-    
-    border-radius: 0.6em;
-    background: #ecf0f1;
-    box-shadow: 0 0.5em 0 rgba(138, 148, 152, 0.2);
-  }
-  
-  .heading {
-    padding: 1em;
-    position: relative;
-    z-index: 1;
-    color: #f7f7f7;
-    background: #f34d35;
-  }
-  
-  .cart {
-    margin: 2.5em;
-    overflow: hidden;
-  }
-  
-  .cart.is-closed {
-    height: 0;
-    margin-top: -2.5em;
-  }
-  
-  .table {
-    background: #ffffff;
-    border-radius: 0.6em;
-    overflow: hidden;
-    clear: both;
-    margin-bottom: 1.8em;
-  }
-  
-  
-  .layout-inline > * {
-    display: inline-block;
-  }
-  
-  .align-center {
-    text-align: center;
-  }
-  
-  .th {
-    background: #f34d35;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 1.5em;
-  }
-  
-  .tf {
-    background: #f34d35;
-    text-transform: uppercase;
-    text-align: right;
-    font-size: 1.2em;  
-  }
-  
-  .tf p {
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  .col {
-    padding: 1em;
-    width: 12%;
-  }
-  
-  .col-pro {
-    width: 44%;
-  }
-  
-  .col-pro > * {
-    vertical-align: middle;
-  }
-  
-  .col-qty {
-    text-align: center;
-    width: 17%;
-  }
-  
-  .col-numeric p {
-    font: bold 1.8em helvetica;
-  }
-  
-  .col-total p {
-    color: #12c8b1;
-  }
-  
-  .tf .col {
-    width: 20%;
-  }
-  
-  .row > div {
-    vertical-align: middle;
-  }
-  
-  .row-bg2 {
-    background: #f7f7f7;
-  }
-  
-  .visibility-cart {
-    position: absolute;
-    color: #fff;
-    top: 0.5em;
-    right: 0.5em;
-    font:  bold 2em arial;
-    border: 0.16em solid #fff;
-    border-radius: 2.5em;
-    padding: 0 0.22em 0 0.25em ;
-  }
-  
-  .col-qty > * {
-    vertical-align: middle; 
-  }
-  
-  .col-qty > input {
-    max-width: 2.6em;
-  }
-  
-  
-  a.qty {
-    width: 1em;
-    line-height: 1em;
-    border-radius: 2em;
-    font-size: 2.5em;
-    font-weight: bold;
-    text-align: center;
-    background: #43ace3;  
-    color: #fff;
-  }
-  
-  a.qty:hover {
-    background: #3b9ac6;
-  }
-  
-  .btn {
-    padding: 10px 30px;
-    border-radius: 0.3em;
-    font-size: 1.4em;
-    font-weight: bold;
-    background: #43ace3;
-    color: #fff;
-    box-shadow: 0 3px 0 rgba(59,154,198, 1)
-  }
-  
-  .btn:hover {
-    box-shadow: 0 3px 0 rgba(59,154,198, 0)
-  }
-  
-  .btn-update {
+ 
+  .product-image {
     float: right;
-    margin: 0 0 1.5em 0;
+    width: auto;
   }
-  
-  .transition {
-    transition: all 0.3s ease-in-out;
+  .product-image img {
+    margin: 0 0 10px 10px;
   }
-  
-  @media screen and ( max-width: 755px) {
-    .container {
-      width: 98%;
-    }
-    
-    .col-pro {
-      width: 35%;
-    }
-    
-    .col-qty {
-      width: 22%;
-    }
-    
-    img {
-      max-width: 100%;
-      margin-bottom: 1em;
-    }
+ 
+  .product-details {
+    float: none;
+    margin-bottom: 10px;
+    width: auto;
   }
-  
-  @media screen and ( max-width: 591px) {
-    
+ 
+  .product-price {
+    clear: both;
+    width: 70px;
   }
+ 
+  .product-quantity {
+    width: 100px;
+  }
+  .product-quantity input {
+    margin-left: 20px;
+  }
+ 
+  .product-quantity:before {
+    content: 'x';
+  }
+ 
+  .product-removal {
+    width: auto;
+  }
+ 
+  .product-line-price {
+    float: right;
+    width: 70px;
+  }
+}
+/* Make more adjustments for phone */
+@media screen and (max-width: 350px) {
+  .product-removal {
+    float: right;
+  }
+ 
+  .product-line-price {
+    float: right;
+    clear: left;
+    width: auto;
+    margin-top: 10px;
+  }
+ 
+  .product .product-line-price:before {
+    content: 'Item Total: $';
+  }
+ 
+  .totals .totals-item label {
+    width: 60%;
+  }
+  .totals .totals-item .totals-value {
+    width: 40%;
+  }
+}
+
