--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div>
-                        <button type="button" class="btn cart-btn" (click)="addToCart()">Add To Cart</button>
+                        <button type="button" class="btn cart-btn" (click)="itemAddToCart(i)">Add To Cart</button>
                     </div>
                 </div>
             </div>
