--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,7 +73,7 @@
     <div class="bar-widget">
         <p class="section-heading">Bars</p>
         <div class="row">
-            <div class="col-sm-4" *ngFor="let product of barsProducts; let i = index">
+            <div class="col-sm-4" *ngFor="let product of barsProducts; let k = index">
                 <div class=" bar-showcase">
                     <img src="assets/cement.jpg" alt="photo">
                     <div>
@@ -83,7 +83,7 @@
                         <div class="bar-price1" *ngFor="let bar of product.barsList; let j = index">
                             <p>{{ bar.type }}&nbsp;<span>&#8211;</span>&nbsp;</p>
                             <p><span>&#8377;&nbsp;</span>{{ bar.value }}&nbsp;<span>&#215;&nbsp;</span></p>
-                            <input type="number" value="" (input)="barsQuntity(bar, $event.target.value, i, j)"
+                            <input type="number" value="" (input)="barsQuntity(bar, $event.target.value, k, j)"
                                 placeholder="quantity" />
                             <span>&nbsp;&#61;&nbsp;</span>
                             <input type="text" class="bars-input-name" name="total" readonly value="{{ bar.totalPrice }}">
@@ -95,7 +95,7 @@
                         <input type="text" name="total" readonly value="{{ product.totalCartPrice }}" />
                     </div>
                     <div>
-                        <button type="button" class="btn cart-btn" (click)="addToCart()">Add To Cart</button>
+                        <button type="button" class="btn cart-btn" (click)="itemAddToCart(k)">Add To Cart</button>
                     </div>
                 </div>
             </div>
@@ -103,35 +103,3 @@
     </div>
 </div>
 
-
-<!-- <div class="container home">
-    <section>
-        <div *ngFor="let item of cementProducts">
-            <div>
-                <input readonly value="{{ item.comp_name }}" />
-                <input readonly value="{{ item.price }}" />
-                <input type="number" (input)="productValue(item, $event.target.value, i)" />
-                <input readonly value="{{ item.totalPrice }}" />
-
-                <button type="submit" (click)="cart()">addToCart</button>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div *ngFor="let product of barsProducts; let i = index">
-            <div>
-                <input readonly value="{{ product.bar_cmp_name }}" />
-                <div *ngFor="let bar of product.barsList; let j = index">
-                    <input readonly value="{{ bar.type }}" />
-                    <input readonly value="{{ bar.value }}" />
-                    <input type="number" value="" (input)="barsQuntity(bar, $event.target.value, i, j)"
-                        placeholder="quantity" />
-                    <input value="{{ bar.totalPrice }}" placeholder="totalPrice" />
-                </div>
-
-                <input value="{{ product.totalCartPrice }}" placeholder="totalCartPrice" />
-            </div>
-        </div>
-    </section>
-    <button type="submit" (click)="barsproductsList()">bars</button>
-</div> -->
