--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,8 +6,15 @@
     <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button> -->
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler navbar-toggler-right"
+      type="button"
+      data-toggle="collapse"
+      data-target="#menu"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="menu">
@@ -16,7 +23,9 @@
           <a class="nav-link active" [routerLink]="['home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['cart']">Cart</a>
+          <a class="nav-link" [routerLink]="['cart']"
+            ><i class="fa fa-shopping-cart  cart-custom"> Cart</i></a
+          >
           <!-- <button type="button" class="btn btn-default btn-sm">
             <span class="glyphicon glyphicon-shopping-cart"></span> Shopping
             Cart
@@ -30,10 +39,18 @@
         </li>
         <li class="nav-item dropdown" *ngIf="isShowhide">
           <img src="assets/user.jpg" alt="image" class="user-image" />
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">
+          <a
+            class="nav-link dropdown-toggle"
+            data-toggle="dropdown"
+            data-target="dropdown_target"
+            href="#"
+          >
             USER
           </a>
-          <div class="dropdown-menu dropdown-menu-left drop1" aria-labelledby="dropdown_target">
+          <div
+            class="dropdown-menu dropdown-menu-left drop1"
+            aria-labelledby="dropdown_target"
+          >
             <div class="image1">
               <div>
                 <img src="assets/user.jpg" alt="image" class="user-image1" />
@@ -46,7 +63,9 @@
             <hr />
             <a class="dropdown-item" [routerLink]="['user']">My Profile</a>
             <hr />
-            <a class="dropdown-item" [routerLink]="['user/myOrders']">My Orders</a>
+            <a class="dropdown-item" [routerLink]="['user/myOrders']"
+              >My Orders</a
+            >
             <hr />
             <div class="drop-button">
               <button type="button" class="btn btn-primary" (click)="logout()">
