--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,103 +1,119 @@
 .cart-section {
   padding: 15px;
-  margin-top:30px;
+  margin-top: 30px;
 }
 
 .empty-cart {
-  margin-bottom:10px;
+  margin-bottom: 10px;
   text-align: end;
 }
 
 .cart-section h1 {
-  margin-bottom :50px;
-
+  margin-bottom: 50px;
 }
 
 .product-image {
   float: left;
   width: 20%;
 }
- 
+
 .product-details {
   float: left;
   width: 37%;
 }
- 
+
 .product-price {
   float: left;
   width: 12%;
 }
- 
+
 .product-quantity {
   float: left;
   width: 10%;
 }
- 
+
 .product-removal {
   float: left;
   width: 9%;
 }
- 
+
 .product-line-price {
   float: left;
   width: 12%;
   text-align: right;
 }
- 
+
 /* This is used as the traditional .clearfix class */
-.group:before, .shopping-cart:before, .column-labels:before, .product:before, .totals-item:before,
+.group:before,
+.shopping-cart:before,
+.column-labels:before,
+.product:before,
+.totals-item:before,
 .group:after,
 .shopping-cart:after,
 .column-labels:after,
 .product:after,
 .totals-item:after {
-  content: '';
+  content: "";
   display: table;
 }
- 
-.group:after, .shopping-cart:after, .column-labels:after, .product:after, .totals-item:after {
+
+.group:after,
+.shopping-cart:after,
+.column-labels:after,
+.product:after,
+.totals-item:after {
   clear: both;
 }
- 
-.group, .shopping-cart, .column-labels, .product, .totals-item {
+
+.group,
+.shopping-cart,
+.column-labels,
+.product,
+.totals-item {
   zoom: 1;
 }
- 
+
 /* Apply clearfix in a few places */
 /* Apply dollar signs */
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
-  content: '$';
-}
- 
+// .product .product-price:before,
+// .product .product-line-price:before,
+// .totals-value:before {
+//   content: "Rs";
+// }
+
 /* Body/Header stuff */
 body {
   padding: 0px 30px 30px 20px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Helvetica, Arial, sans-serif;
   font-weight: 100;
 }
- 
+
 h1 {
   font-weight: 100;
 }
- 
+
 label {
   color: #aaa;
 }
- 
+
 .shopping-cart {
   margin-top: -45px;
 }
- 
+
 /* Column headers */
 .column-labels label {
   padding-bottom: 15px;
   margin-bottom: 15px;
   border-bottom: 1px solid #eee;
 }
-.column-labels .product-image, .column-labels .product-details, .column-labels .product-removal {
+.column-labels .product-image,
+.column-labels .product-details,
+.column-labels .product-removal {
   text-indent: -9999px;
 }
- 
+
 /* Product entries */
 .product {
   margin-bottom: 20px;
@@ -168,13 +184,16 @@ label {
 .product .remove-product:hover {
   background-color: #a44;
 }
- 
+
 /* Totals section */
 .totals .totals-item {
   float: right;
   clear: both;
   width: 100%;
   margin-bottom: 10px;
+  label {
+    color: black;
+  }
 }
 .totals .totals-item label {
   float: left;
@@ -190,7 +209,7 @@ label {
 .totals .totals-item-total {
   font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
 }
- 
+
 .checkout {
   float: right;
   border: 0;
@@ -201,11 +220,11 @@ label {
   font-size: 25px;
   border-radius: 3px;
 }
- 
+
 .checkout:hover {
   background-color: #494;
 }
- 
+
 /* Make adjustments for tablet */
 @media screen and (max-width: 650px) {
   .shopping-cart {
@@ -213,11 +232,11 @@ label {
     padding-top: 20px;
     border-top: 1px solid #eee;
   }
- 
+
   .column-labels {
     display: none;
   }
- 
+
   .product-image {
     float: right;
     width: auto;
@@ -225,33 +244,33 @@ label {
   .product-image img {
     margin: 0 0 10px 10px;
   }
- 
+
   .product-details {
     float: none;
     margin-bottom: 10px;
     width: auto;
   }
- 
+
   .product-price {
     clear: both;
     width: 70px;
   }
- 
+
   .product-quantity {
     width: 100px;
   }
   .product-quantity input {
     margin-left: 20px;
   }
- 
+
   .product-quantity:before {
-    content: 'x';
+    content: "x";
   }
- 
+
   .product-removal {
     width: auto;
   }
- 
+
   .product-line-price {
     float: right;
     width: 70px;
@@ -262,18 +281,18 @@ label {
   .product-removal {
     float: right;
   }
- 
+
   .product-line-price {
     float: right;
     clear: left;
     width: auto;
     margin-top: 10px;
   }
- 
+
   .product .product-line-price:before {
-    content: 'Item Total: $';
+    content: "Item Total: $";
   }
- 
+
   .totals .totals-item label {
     width: 60%;
   }
@@ -281,4 +300,3 @@ label {
     width: 40%;
   }
 }
-
