--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,15 +16,15 @@
             <div class="carousel-item">
                 <img src="assets/caro1.jpg" alt="Chicago" width="1100" height="500">
                 <div class="carousel-caption">
-                    <h3>Chicago</h3>
-                    <p>Thank you, Chicago!</p>
+                   <!--  <h3>Chicago</h3>
+                    <p>Thank you, Chicago!</p> -->
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets/caro2.jpg" alt="New York" width="1100" height="500">
                 <div class="carousel-caption">
-                    <h3>New York</h3>
-                    <p>We love the Big Apple!</p>
+                    <!-- <h3>New York</h3>
+                    <p>We love the Big Apple!</p> -->
                 </div>
             </div>
         </div>
