--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" [routerLink]="['home']">Home</a>
+          <a class="nav-link active" [routerLink]="['home']"><i class="fa fa-home cart-custom"> Home</i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['cart']"
@@ -32,10 +32,10 @@
           </button> -->
         </li>
         <li class="nav-item" *ngIf="!isShowhide">
-          <a class="nav-link" [routerLink]="['login']">SignIn</a>
+          <a class="nav-link" [routerLink]="['login']"><i class="fa fa-sign-in cart-custom"> SignIn</i></a>
         </li>
         <li class="nav-item" *ngIf="!isShowhide">
-          <a class="nav-link" [routerLink]="['signUp']">SignUp</a>
+          <a class="nav-link" [routerLink]="['signUp']"><i class="fa fa-user-plus cart-custom"> SignUp</i></a>
         </li>
         <li class="nav-item dropdown" *ngIf="isShowhide">
           <img src="assets/user.jpg" alt="image" class="user-image" />
@@ -69,7 +69,7 @@
             <hr />
             <div class="drop-button">
               <button type="button" class="btn btn-primary" (click)="logout()">
-                Logout
+                <i class="fa fa-sing-out cart-custom"> Logout</i>
               </button>
             </div>
           </div>
