--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -73,6 +73,14 @@
                 />
               </div>
             </div>
+
+           <div class="col-md-6">
+            <div class="form-group">
+              <label>Address</label>
+              <button (click) = 'createAddress()'>Address</button>
+            </div>
+           </div>
+
           </div>
           <div class="update-btn">
             <button class="btn btn-md btn-primary" type="submit">update</button>
